--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
-{
+ï»¿{
     "path": {
         "from": "F:MURS_DISP_x64\\Cxemi",
-        "to": "C:\\Users\\qwerty\\Desktop\\Ñõåìû"
+        "to": "C:\\Users\\qwerty\\Desktop\\Ð¡Ñ…ÐµÐ¼Ñ‹"
     }
 }
